src/mailhog/manifests/mailhog-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  labels:
    app: mailhog
spec:
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: http
      port: 8025
      targetPort: 8025
  selector:
    app: mailhog
  type: NodePort
